--- a/src/main/resources/static/Cover Template for Bootstrap.html
+++ b/src/main/resources/static/Cover Template for Bootstrap.html
@@ -10,13 +10,13 @@
     <title>Cover Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="Cover%20Template%20for%20Bootstrap_files/bootstrap.css" rel="stylesheet">
+    <link href="./Cover%20Template%20for%20Bootstrap_files/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="Cover%20Template%20for%20Bootstrap_files/cover.css" rel="stylesheet">
+    <link href="./Cover%20Template%20for%20Bootstrap_files/cover.css" rel="stylesheet">
   </head>
 
-  <body class="text-center">
+  <body class="text-center" onload="loadOrdersList()">
 
     <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
       <header class="masthead mb-auto">
@@ -31,33 +31,8 @@
       </header>
 
       <main role="main" class="inner cover">
-          <button type="button" onclick="createOrder()">Click Me!</button>
-          <!--<table class="table table-dark">
-              <thead>
-                <tr>
-                  <th scope="col">Product</th>
-                  <th scope="col">Quantity</th>
-                  <th scope="col">Price</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>PIZZA</td>
-                  <td>3</td>
-                  <td>$10000</td>
-                </tr>
-                <tr>
-                  <td>HOTDOG</td>
-                  <td>1</td>
-                  <td>$3000</td>
-                </tr>
-                <tr>
-                  <td>COKE</td>
-                  <td>4</td>
-                  <td>$1300</td>
-                </tr>
-              </tbody>
-            </table>-->
+          <div id="tables"></div>
+          <!--<button type="button" onclick="createOrder()">Click Me!</button>-->
         <!--<h1 class="cover-heading">Cover your page.</h1>
         <p class="lead">Cover is a one-page template for building simple
  and beautiful home pages. Download, edit the text, and add your own 
@@ -78,11 +53,10 @@ fullscreen background photo to make it your own.</p>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="Cover%20Template%20for%20Bootstrap_files/OrdersController.js"/>
-    <script src="Cover%20Template%20for%20Bootstrap_files/jquery-3.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="./Cover%20Template%20for%20Bootstrap_files/jquery-3.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="Cover%20Template%20for%20Bootstrap_files/popper.js"></script>
-    <script src="Cover%20Template%20for%20Bootstrap_files/bootstrap.js"></script>
-  
-
+    <script src="./Cover%20Template%20for%20Bootstrap_files/popper.js"></script>
+    <script src="./Cover%20Template%20for%20Bootstrap_files/bootstrap.js"></script>
+    <script src="./Cover%20Template%20for%20Bootstrap_files/OrdersController.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </body></html>
