--- a/src/main/resources/static/Cover Template for Bootstrap.html
+++ b/src/main/resources/static/Cover Template for Bootstrap.html
@@ -57,6 +57,6 @@ fullscreen background photo to make it your own.</p>
     <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
     <script src="./Cover%20Template%20for%20Bootstrap_files/popper.js"></script>
     <script src="./Cover%20Template%20for%20Bootstrap_files/bootstrap.js"></script>
-    <script src="./Cover%20Template%20for%20Bootstrap_files/OrdersController.js"></script>
+    <script src="./js/OrdersController.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </body></html>
